--- a/src/style.css
+++ b/src/style.css
@@ -3,19 +3,34 @@
   padding: 0px;
   background-color: var(--background-color);
   font-family: Arial, Helvetica, sans-serif;
+  
 }
 
-#webpage-root{
-  display: grid;
-  height: 100vh;
-  width: 100vw;
-  grid-template-columns: 30% 70%;
-  grid-auto-flow: column;
+:root{
+  --dark-gray: #33393D;
+  --yellow: #FFCD24;
+  --solid-blue: #2AABE4;
+  --light-blue: #9DC8E4;
+  --light-gray: #666B6E;
 }
 
+body{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 60px;
+  background-color: var(--solid-blue);
+  color: white;
+}
+
+.header{
+  font-size: 2rem;
+  padding: 1em;
+  color: white;
+  box-shadow: 0px 1px 3px var(--light-gray);
+}
 
 .screen{
-  height: 100vh;
   display: grid;
   justify-items: center;
   align-items: center;
@@ -35,18 +50,66 @@
   padding-right: 1em;
 }
 
-table{
-  height: 400px;
+/* Post submission table screen styling */
+
+.screen.table{
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  padding-bottom: min(10%, 100px);
+}
+
+.table .mortgage-info{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  background-color: white;
+  color: var(--dark-gray);
+  padding: .5em 1em;
+  box-shadow: 0px 2px 10px var(--light-gray);
+  border-radius: 1em;
+}
+
+.table .mortgage-info div{
+  font-weight: bold;
+}
+
+.table-wrapper{
+  overflow-y: scroll;
+  height: min(350px, 30%);
+  background-color: white;
+  color: black;
+  box-shadow: 0px 5px 15px var(--light-gray);
+}
+
+table, th, td{
+  border: 1px solid black;
+  border-collapse: collapse;
 }
 
 tr:nth-child(even){
-  background-color: #D6EEEE;
+  background-color: var(--light-blue);
 }
 
 tr:hover{
-  background-color: #A6EEEE;
+  background-color: var(--yellow);
 }
 
 th, td{
   padding: 0px 1em 0px 1em;
+}
+
+.screen.table button{
+  background-color: var(--yellow);
+  color: black;
+  border: none;
+  box-shadow: 0px 2px 10px var(--light-gray);
+  height: 2em;
+  border-radius: 2em;
+  padding: 5px .5em 5px .5em;
+  font-size: 1.2rem;
+  display: flex;
+  gap: 20px;
+  justify-items: center;
+  align-items: center;
 }
