--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,7 @@ body{
   color: white;
 }
 
+/* Document header */
 .header{
   font-size: 2rem;
   padding: 1em;
@@ -36,18 +37,32 @@ body{
   align-items: center;
 }
 
-.form{
+/* Input form screen */
+
+.screen .form{
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  background-color: var(--light-blue);
+  padding: 3%;
+  box-shadow: 0px 2px 10px var(--light-gray);
+  color: var(--dark-gray);
+  border-radius: 5px;
 }
 
 .form input{
   height: 1.5em;
-  border-radius: 1.5em;
+  border-radius: 5px;
   padding-left: 1em;
   padding-right: 1em;
+  background-color: white;
+}
+
+.form button{
+  border-radius: 100%;
+  background-color: var(--yellow);
+  padding: 5px;
 }
 
 /* Post submission table screen styling */
