--- a/src/style.css
+++ b/src/style.css
@@ -77,6 +77,9 @@ body{
 .table .mortgage-info{
   display: flex;
   align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: max(60%, 400px);
   gap: 20px;
   background-color: white;
   color: var(--dark-gray);
